--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ДЗ№5</title>
+    <title>ДЗ№4</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -173,41 +173,41 @@
           </ul>
         </address>
       </div>
-      <div class="footer-dark-list">
-        <h2 class="footer-tex">Приєднуйся</h2>
-        <div class="">
-          <ul class="social-links">
-            <li class="list social-item-margin">
-              <a href="https://www.twitter.com" class="social-item-footer">
-                <svg class="item-footer">
-                  <use href="./images/symbol-def.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="list social-item-margin">
-              <a href="https://www.twitter.com" class="social-item-footer">
-                <svg class="item-footer">
-                  <use href="./images/symbol-def.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="list social-item-margin">
-              <a href="https://www.twitter.com" class="social-item-footer">
-                <svg class="item-footer">
-                  <use href="./images/symbol-def.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="list social-item-margin">
-              <a href="https://www.twitter.com" class="social-item-footer">
-                <svg class="item-footer">
-                  <use href="./images/symbol-def.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-        </ul>
-        </div>
-      </div>
+    </div>
+    <div class="footer-dark-list">
+      <p class="footer-tex">ПРИЄДНУЙТЕСЬ</p>
+      <div class="">
+         <ul class="social-footer-links">
+        <li class="list social-item-distance">
+          <a href="https://www.twitter.com" class="social-item-footer"> 
+          <svg class="item-footer">
+            <use href="./images/symbol-def.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="list social-item-distance">
+          <a href="https://www.twitter.com" class="social-item-footer"> 
+          <svg class="item-footer">
+            <use href="./images/symbol-def.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="list social-item-distance">
+          <a href="https://www.twitter.com" class="social-item-footer"> 
+          <svg class="item-footer">
+            <use href="./images/symbol-def.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="list social-item-distance">
+          <a href="https://www.twitter.com" class="social-item-footer"> 
+          <svg class="item-footer">
+            <use href="./images/symbol-def.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
     </div>
   </footer>
   </body>
