--- a/portfolio.html
+++ b/portfolio.html
@@ -68,16 +68,28 @@
           </ul>
         <!--link-->
           <ul class="list portfolio-grid">
-            <li class="">
+
+
+
+            <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
-                <img src="./images/crack.jpg" alt="design" width="370" height="294" />
-                <div class="portfolio-img">
+              <div class="www">
+                <div class="overlay">
+                  <img src="./images/crack.jpg" alt="design" width="370" height="294" />
+                </div>
+                 <p class="qqq">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+              </div>
+
+               <div class="portfolio-img">
                   <h2 class="caption-text">Технокряк</h2>
                     <p class="basic-text">Веб-сайт</p>
-                </div>
+               </div>
               </a>
             </li>
-            <li class="">
+
+
+
+            <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
                 <img src="./images/star.jpg" alt="Poster" width="370" height="294" />
                 <div class="portfolio-img">
@@ -156,16 +168,26 @@
     <!--footer-->
   <footer class="foot">
     <div class="container footer-flex">
+        
       <div>
-        <a class="link logo-footer" href="./index.html"><span class="acsent-logo">Web</span>Studio</a>
+        <a class="link logo-footer" href="./index.html">
+          <span class="acsent-logo">Web</span>Studio</a
+        >
         <address class="adress-style">
           <ul class="list">
             <li class="info-size">
-              <a class="link maps" href="https://goo.gl/maps/6wFw4vnAE2UTVkqL7" target="_blank"
-                rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
+              <a
+                class="link maps"
+                href="https://goo.gl/maps/6wFw4vnAE2UTVkqL7"
+                target="_blank"
+                rel="noopener noreferrer"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
             </li>
             <li class="info-size">
-              <a id="contact" class="link contact-footer" href="mailto:info@example.com">info@example.com</a>
+              <a id="contact" class="link contact-footer" href="mailto:info@example.com"
+                >info@example.com</a
+              >
             </li>
             <li class="info-size">
               <a class="link contact-footer" href="tel:+380961111111">+38 096 111 11 11</a>
@@ -173,42 +195,41 @@
           </ul>
         </address>
       </div>
-    </div>
-    <div class="footer-dark-list">
-      <p class="footer-tex">ПРИЄДНУЙТЕСЬ</p>
-      <div class="">
-         <ul class="social-footer-links">
-        <li class="list social-item-distance">
-          <a href="https://www.twitter.com" class="social-item-footer"> 
-          <svg class="item-footer">
-            <use href="./images/symbol-def.svg#icon-instagram"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="list social-item-distance">
-          <a href="https://www.twitter.com" class="social-item-footer"> 
-          <svg class="item-footer">
-            <use href="./images/symbol-def.svg#icon-twitter"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="list social-item-distance">
-          <a href="https://www.twitter.com" class="social-item-footer"> 
-          <svg class="item-footer">
-            <use href="./images/symbol-def.svg#icon-facebook"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="list social-item-distance">
-          <a href="https://www.twitter.com" class="social-item-footer"> 
-          <svg class="item-footer">
-            <use href="./images/symbol-def.svg#icon-linkedin"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </div>
-    </div>
+      <div class="footer-dark-list">
+        <p class="footer-tex">приєднуйтесь</p>
+        <ul class="social-footer-links">
+          <li class="list social-item-distance">
+            <a href="https://www.twitter.com" class="social-item-footer">
+              <svg class="item-footer">
+                <use href="./images/symbol-def.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="list social-item-distance">
+            <a href="https://www.twitter.com" class="social-item-footer">
+              <svg class="item-footer">
+                <use href="./images/symbol-def.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="list social-item-distance">
+            <a href="https://www.twitter.com" class="social-item-footer">
+              <svg class="item-footer">
+                <use href="./images/symbol-def.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="list social-item-distance">
+            <a href="https://www.twitter.com" class="social-item-footer">
+              <svg class="item-footer">
+                <use href="./images/symbol-def.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    
+  </div>
   </footer>
   </body>
 </html>
