--- a/index.html
+++ b/index.html
@@ -155,14 +155,14 @@
                     </a>
                   </li>
                   <li class="list social-item">
-                    <a href="https://www.twitter.com" class="social-link">
+                    <a href="https://www.facebook.com" class="social-link">
                       <svg class="item">
                         <use href="./images/symbol-def.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="list social-item">
-                    <a href="https://www.twitter.com" class="social-link">
+                    <a href="https://www.linkedin.com" class="social-link">
                       <svg class="item">
                         <use href="./images/symbol-def.svg#icon-linkedin"></use>
                       </svg>
@@ -192,14 +192,14 @@
                     </a>
                   </li>
                   <li class="list social-item">
-                    <a href="https://www.twitter.com" class="social-link">
+                    <a href="https://www.facebook.com" class="social-link">
                       <svg class="item">
                         <use href="./images/symbol-def.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="list social-item">
-                    <a href="https://www.twitter.com" class="social-link">
+                    <a href="https://www.linkedin.com" class="social-link">
                       <svg class="item">
                         <use href="./images/symbol-def.svg#icon-linkedin"></use>
                       </svg>
@@ -234,14 +234,14 @@
                     </a>
                   </li>
                   <li class="list social-item">
-                    <a href="https://www.twitter.com" class="social-link">
+                    <a href="https://www.facebook.com" class="social-link">
                       <svg class="item">
                         <use href="./images/symbol-def.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="list social-item">
-                    <a href="https://www.twitter.com" class="social-link">
+                    <a href="https://www.linkedin.com" class="social-link">
                       <svg class="item">
                         <use href="./images/symbol-def.svg#icon-linkedin"></use>
                       </svg>
@@ -276,14 +276,14 @@
                     </a>
                   </li>
                   <li class="list social-item">
-                    <a href="https://www.twitter.com" class="social-link">
+                    <a href="https://www.facebook.com" class="social-link">
                       <svg class="item">
                         <use href="./images/symbol-def.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="list social-item">
-                    <a href="https://www.twitter.com" class="social-link">
+                    <a href="https://www.linkedin.com" class="social-link">
                       <svg class="item">
                         <use href="./images/symbol-def.svg#icon-linkedin"></use>
                       </svg>
