--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           
           <ul class="list doing">
             <li class="stud-size">
-              <div class="stud-made">
+              <a class="stud-made">
                 <img
                 class="img-doing"
                 src="./images/work-for-pc.jpg"
@@ -121,14 +121,14 @@
                 height="294"
               />
               <p class="stud-text">десктопрні додатки</p>
-              </div>
+              </a>
             </li>
 
 
 
 
             <li class="stud-size">
-              <div class="stud-made">
+              <a class="stud-made">
               <img
                 class="img-doing"
                 src="./images/laptop-work.jpg"
@@ -137,12 +137,12 @@
                 height="294"
               />
               <p class="stud-text">мобільні додатки</p>
-              </div>
+              </a>
             </li>
 
 
             <li class="stud-size">
-              <div class="stud-made">
+              <a class="stud-made">
               <img
                 class="img-doing"
                 src="./images/work-on-a-tablet.jpg"
@@ -151,7 +151,7 @@
                 height="294"
               />
               <p class="stud-text">дизайнерські рішення</p>
-              </div>
+              </a>
             </li>
 
 
