--- a/portfolio.html
+++ b/portfolio.html
@@ -69,20 +69,14 @@
         <!--link-->
           <ul class="list portfolio-grid">
 
-
-
-            <li class="li-position">
+            <li>
               <a class="link li-size" rel="preconnect" href="#">
-              <div class="position">
-                <div class="overlay">
+                <div>
                   <img src="./images/crack.jpg" alt="design" width="370" height="294" />
-                
-                <div class="shadow">
-                  <p class="context">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  <div class="context">
+                  <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  </div>
                 </div>
-                </div>
-              </div>
-
                <div class="portfolio-img">
                   <h2 class="caption-text">Технокряк</h2>
                     <p class="basic-text">Веб-сайт</p>
@@ -94,14 +88,12 @@
 
             <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
-                <div class="position">
-                  <div class="overlay">
+                <div>
                 <img src="./images/star.jpg" alt="Poster" width="370" height="294" />
-                <div class="shadow">
-                  <p class="context">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <div class="context">
+                  <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  </div>
                 </div>
-                </div>
-              </div>
                 <div class="portfolio-img">
                 <h2 class="caption-text">Постер New Orlean vs Golden Star</h2>
                   <p class="basic-text">Дизайн</p>
@@ -112,14 +104,12 @@
             
             <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
-                <div class="position">
-                  <div class="overlay">
+                <div>
                 <img src="./images/seafood.jpg" alt="shark" width="370" height="294" />
-                <div class="shadow">
-                  <p class="context">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <div class="context">
+                  <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  </div>
                 </div>
-                </div>
-              </div>
                 <div class="portfolio-img">
                 <h2 class="caption-text">Ресторан Seafood</h2>
                   <p class="basic-text">Приложение</p>
@@ -131,14 +121,12 @@
 
             <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
-                <div class="position">
-                  <div class="overlay">
+                <div>
                 <img src="./images/prime.jpg" alt="garniture" width="370" height="294" />
-                <div class="shadow">
-                  <p class="context">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <div class="context">
+                  <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  </div>
                 </div>
-                </div>
-              </div>
                 <div class="portfolio-img">
                 <h2 class="caption-text">Проект Prime</h2>
                   <p class="basic-text">Маркетинг</p>
@@ -148,14 +136,12 @@
 
             <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
-                <div class="position">
-                  <div class="overlay">
+                <div>
                 <img src="./images/boxes.jpg" alt="box-in-box" width="370" height="294" />
-                <div class="shadow">
-                  <p class="context">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <div class="context">
+                  <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  </div>
                 </div>
-                </div>
-              </div>
                 <div class="portfolio-img">
                 <h2 class="caption-text">Проект Boxes</h2>
                   <p class="basic-text">Приложение</p>
@@ -165,14 +151,12 @@
 
             <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
-                <div class="position">
-                  <div class="overlay">
+                <div>
                 <img src="./images/borders.jpg" alt="desktop" width="370" height="294" />
-                <div class="shadow">
-                  <p class="context">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <div class="context">
+                  <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  </div>
                 </div>
-                </div>
-              </div>
                 <div class="portfolio-img">
                 <h2 class="caption-text">Inspiration has on Borders</h2>
                   <p class="basic-text">Веб-Сайт</p>
@@ -183,14 +167,12 @@
 
             <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
-                <div class="position">
-                  <div class="overlay">
+                <div>
                 <img src="./images/limited-edition.jpg" alt="book" width="370" height="294" />
-                <div class="shadow">
-                  <p class="context">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <div class="context">
+                  <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  </div>
                 </div>
-                </div>
-              </div>
                 <div class="portfolio-img">
                 <h2 class="caption-text">Издание Limited Edition</h2>
                   <p class="basic-text">Дизайн</p>
@@ -201,14 +183,12 @@
 
             <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
-                <div class="position">
-                  <div class="overlay">
+                <div>
                 <img src="./images/lab.jpg" alt="design" width="370" height="294" />
-                <div class="shadow">
-                  <p class="context">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                <div class="context">
+                  <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  </div>
                 </div>
-                </div>
-              </div>
                 <div class="portfolio-img">
                 <h2 class="caption-text">Проект LAB</h2>
                   <p class="basic-text">Маркетинг</p>
@@ -219,15 +199,13 @@
 
             <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
-                <div class="position">
-                  <div class="overlay">
+                <div >
                 <img src="./images/growing-business.jpg" alt="laptop-work" width="370"
                   height="294" />
-                  <div class="shadow">
-                    <p class="context">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  <div class="context">
+                    <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                    </div>
                   </div>
-                  </div>
-                </div>
                   <div class="portfolio-img">
                 <h2 class="caption-text">Growing Business</h2>
                   <p class="basic-text">Приложение</p>
