--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           
           <ul class="list doing">
             <li class="stud-size">
-              <a class="stud-made">
+              <a class="stud-made" href="#">
                 <img
                 class="img-doing"
                 src="./images/work-for-pc.jpg"
@@ -128,7 +128,7 @@
 
 
             <li class="stud-size">
-              <a class="stud-made">
+              <a class="stud-made" href="#">
               <img
                 class="img-doing"
                 src="./images/laptop-work.jpg"
@@ -142,7 +142,7 @@
 
 
             <li class="stud-size">
-              <a class="stud-made">
+              <a class="stud-made" href="#">
               <img
                 class="img-doing"
                 src="./images/work-on-a-tablet.jpg"
