--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
 
             <li>
               <a class="link li-size" rel="preconnect" href="#">
-                <div>
+                <div class="portfolio-cart">
                   <img src="./images/crack.jpg" alt="design" width="370" height="294" />
                   <div class="context">
                   <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -88,7 +88,7 @@
 
             <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
-                <div>
+                <div class="portfolio-cart">
                 <img src="./images/star.jpg" alt="Poster" width="370" height="294" />
                 <div class="context">
                   <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -104,7 +104,7 @@
             
             <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
-                <div>
+                <div class="portfolio-cart">
                 <img src="./images/seafood.jpg" alt="shark" width="370" height="294" />
                 <div class="context">
                   <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -121,7 +121,7 @@
 
             <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
-                <div>
+                <div class="portfolio-cart">
                 <img src="./images/prime.jpg" alt="garniture" width="370" height="294" />
                 <div class="context">
                   <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -136,7 +136,7 @@
 
             <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
-                <div>
+                <div class="portfolio-cart">
                 <img src="./images/boxes.jpg" alt="box-in-box" width="370" height="294" />
                 <div class="context">
                   <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -151,7 +151,7 @@
 
             <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
-                <div>
+                <div class="portfolio-cart">
                 <img src="./images/borders.jpg" alt="desktop" width="370" height="294" />
                 <div class="context">
                   <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -167,7 +167,7 @@
 
             <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
-                <div>
+                <div class="portfolio-cart">
                 <img src="./images/limited-edition.jpg" alt="book" width="370" height="294" />
                 <div class="context">
                   <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -183,7 +183,7 @@
 
             <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
-                <div>
+                <div class="portfolio-cart">
                 <img src="./images/lab.jpg" alt="design" width="370" height="294" />
                 <div class="context">
                   <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
@@ -199,7 +199,7 @@
 
             <li class="li-position">
               <a class="link li-size" rel="preconnect" href="#">
-                <div >
+                <div class="portfolio-cart">
                 <img src="./images/growing-business.jpg" alt="laptop-work" width="370"
                   height="294" />
                   <div class="context">
